--- a/src/common.scss
+++ b/src/common.scss
@@ -98,3 +98,30 @@ $break-small-mediacard: 660px;
 		@content;
 	}
 }
+
+
+.select-posts{
+	position: relative;
+
+	&__posts-list{
+		background: #f3f4f5;
+		border-radius: 5px;
+		position: absolute;
+		width: calc(100% - 15px);
+		padding: 8px;
+		border: 1px solid gray;
+		transform: translateY(4px);
+		max-height: 190px;
+
+		ul{
+			max-height: 117px;
+			overflow-y: auto;
+
+			li{ padding: 0 5px; }
+			li:hover, li.active{
+				background-color: white;
+				border-radius: 3px;
+			}
+		}
+	}
+}
