Added editor styles

--- a/src/components/block-gallery/styles/editor/_core-themes.scss
+++ b/src/components/block-gallery/styles/editor/_core-themes.scss
@@ -28,7 +28,7 @@
 
 	.coblocks-gallery--primary-caption.editor-rich-text__tinymce {
 		color: #707070;
-		font-family: "Noto Sans", sans-serif;
+		font-family: inherit, sans-serif;
 		font-size: 12px;
 		line-height: 1.5;
 		margin-bottom: -5px;
