--- a/src/blocks/posts/styles/style.scss
+++ b/src/blocks/posts/styles/style.scss
@@ -10,6 +10,34 @@
 	&.columns-1 > div:last-child {
 		margin-bottom: 0;
 	}
+
+	&.is-style-featured .columns .has-featured-image{
+		position: relative;
+
+		.wp-block-coblocks-posts__content{
+			position: absolute;
+			bottom: 10px;
+			padding: 20px;
+
+			a, * {
+				color: white;
+				position: relative;
+				z-index: 1;
+			}
+
+			a{ font-size: 30px; line-height: 1.2; }
+
+			&:after{
+				content: '';
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0;
+				background: linear-gradient(180deg, rgba(255,255,255,0) 0%, #000000 100%);
+				left: 0;
+			}
+		}
+	}
 }
 
 .wp-block-coblocks-posts__date {
@@ -23,7 +51,6 @@
 		line-height: 1.6;
 
 		&__content a {
-			font-family: $default-font;
 			font-size: calc(22px * 1.125);
 			font-weight: 700;
 			line-height: 1.2;
@@ -33,7 +60,6 @@
 		}
 
 		&__date {
-			font-family: $default-font;
 			font-weight: 700;
 		}
 	}
