--- a/src/styles/editor/core/_variables.scss
+++ b/src/styles/editor/core/_variables.scss
@@ -1,10 +1,10 @@
 // Often re-used variables
 
 // Fonts & basics
-$default-font: -apple-system, BlinkMacSystemFont,"Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell,"Helvetica Neue", sans-serif;
+$default-font: inherit;
 $default-font-size: 13px;
 $default-line-height: 1.4;
-$editor-font: "Noto Serif", serif;
+$editor-font: inherit, serif;
 $editor-html-font: Menlo, Consolas, monaco, monospace;
 $editor-font-size: 16px;
 $text-editor-font-size: 14px;
